<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name">Bota pra Rodar</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="complete_name">Nome completo</string>
    <string name="add_user_title">Cadastrar pessoa</string>
    <string name="confirmar_devolucao">Confirmar devolução</string>
    <string name="quiz_title">Questionário</string>
    <string name="action_search">action_search</string>
    <string name="add_community_title">Adicionar comunidade</string>
    <string name="community_name_hint">Nome</string>
    <string name="community_description_hint">Descrição</string>
    <string name="community_address_hint">Endereço</string>
    <string name="community_org_name_hint">Nome do responsável</string>
    <string name="community_org_email_hint">Email do responsável</string>
    <string name="community_add_button">Adicionar</string>
    <string name="community_add_success_message">Comunidade adicionada com sucesso</string>
    <string name="community_add_confirm">Tudo certo!</string>
    <string name="community_confirm_title">Os dados estão corretos?</string>
    <string name="empties_fields_error">Preencha todos os campos</string>
    <string name="login_error">Falha no login</string>
...
    <string name="bicycle_invalid_order_number">Número de ordem inválido</string>
    <string name="order_number">Número de ordem</string>
    <string name="error_registering_bicycle">Falha ao cadastrar a bicicleta</string>
    <string name="error_editing_bicycle">Falha ao editar a bicicleta</string>

    <string name="email_format_warning">Insira um email válido</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha</string>
    <string name="prompt_password_confirmation">Confirme a senha</string>
    <string name="prompt_full_name">Nome completo</string>
    <string name="prompt_welcome_title">É bom ver você novamente!</string>
    <string name="prompt_welcome_message">Você já usou o e-mail &lt;b>%s&lt;/b> para fazer login. Insira a senha dessa conta.</string>
    <string name="action_sign_in_or_register">Entrar/Registrar</string>
...
