...
            app:layout_constraintBottom_toTopOf="@id/guideline3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title"/>

    <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/fragment_horizontal_margin"
            android:layout_marginVertical="@dimen/default_view_margin"
            android:text="@string/login"
            android:textSize="@dimen/text_size_large"
...
